--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "JavaScript development environment",
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
-    "start": "babel-node buildScripts/srcServer.js",
+    "start": "babel-node buildScripts/srcServer.js lint:watch",
     "localtunnel": "lt --port 3000 --subdomain starter",
-    "share": "run-p start localtunnel"
+    "share": "run-p start localtunnel",
+    "lint": "esw webpack.config.* src buildScripts --color",
+    "lint:watch": "npm run lint -- --watch"
   },
   "author": "Prince O Prince",
   "license": "MIT",
